~feat(house) add controller and routes for house
add controller for creating and getting house object
add example test to test new controller
